--- a/public/styles/maintenance.css
+++ b/public/styles/maintenance.css
@@ -137,3 +137,6 @@ main > h1{
     width: 450px;
     height: 450px;
 }
+.baliktad {
+    transform: rotate(180deg);
+  }
