--- a/public/styles/shop.css
+++ b/public/styles/shop.css
@@ -24,7 +24,7 @@ p{
     padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
-    height: 100dvh;
+    height: 100%;
     border-right: 1px solid gray;
 }
 
@@ -32,6 +32,8 @@ body{
     display: grid;
     grid-template-columns: 250px 1fr;
     height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .links{
@@ -338,4 +340,8 @@ button.cart{
   .product button:hover {
     background-color: #708090;
     color: #fff;
+  }
+
+  .baliktad {
+    transform: rotate(180deg);
   }
